# kinect-v2-make-dataset-for-surfelwarp

./: README.md  main.cpp
kinect_dataset/: CMakeLists.txt
